--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "administrator/otherrecord",
+    "name": "bearxw/otherrecord",
     "authors": [
         {
             "name": "Bearxw",
